Prepend "cd" and "clear" commands with a space in the Terminal Panel

This prevents that these commands, which have not been enetered by the
user, but generated automatically, appear in the shell history, provided
that the shell is configured appropriately.

BUG: 204039
FIXED-IN: 4.9.0