src/panels/terminal/terminalpanel.cpp
@@ -158,10 +158,10 @@ void TerminalPanel::sendCdToTerminal(const QString& dir)
         }
     }
 
-    m_terminal->sendInput("cd " + KShell::quoteArg(dir) + '\n');
+    m_terminal->sendInput(" cd " + KShell::quoteArg(dir) + '\n');
 
     if (m_clearTerminal) {
-        m_terminal->sendInput("clear\n");
+        m_terminal->sendInput(" clear\n");
         m_clearTerminal = false;
     }
 }
